[package]
authors = ['TeaRust']
edition = '2018'
homepage = 'https://teaproject.org'
license = 'GPL-3.0'
name = 'camellia-runtime'
repository = 'https://github.com/tearust/tea-camellia'
version = '0.0.1'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[build-dependencies]
substrate-wasm-builder={git = 'https://github.com/paritytech/substrate.git', rev = '558a68f8'}

[dependencies]
# external dependencies
codec = {default-features = false, features = ['derive'], package = 'parity-scale-codec', version = '2.0.0'}
scale-info = { version = "1.0", default-features = false, features = ["derive"] }
hex-literal= {optional = true, version = '0.3.1'}
static_assertions = "1.1.0"

# primitives
node-primitives = { version = "2.0.0", default-features = false, git = 'https://github.com/paritytech/substrate.git', rev = '558a68f8'}
sp-api = {default-features = false, git = 'https://github.com/paritytech/substrate.git', rev = '558a68f8'}
sp-block-builder = {default-features = false, git = 'https://github.com/paritytech/substrate.git', rev = '558a68f8'}
sp-consensus-babe = {default-features = false,  git = 'https://github.com/paritytech/substrate.git', rev = '558a68f8'}
sp-core = {default-features = false, git = 'https://github.com/paritytech/substrate.git', rev = '558a68f8'}
sp-inherents = {default-features = false, git = 'https://github.com/paritytech/substrate.git', rev = '558a68f8'}
sp-offchain = {default-features = false, git = 'https://github.com/paritytech/substrate.git', rev = '558a68f8'}
sp-runtime = {default-features = false, git = 'https://github.com/paritytech/substrate.git', rev = '558a68f8'}
sp-session = {default-features = false, git = 'https://github.com/paritytech/substrate.git', rev = '558a68f8'}
sp-std = {default-features = false, git = 'https://github.com/paritytech/substrate.git', rev = '558a68f8'}
sp-io = {default-features = false, git = 'https://github.com/paritytech/substrate.git', rev = '558a68f8'}
sp-transaction-pool = {default-features = false, git = 'https://github.com/paritytech/substrate.git', rev = '558a68f8'}
sp-version = {default-features = false, git = 'https://github.com/paritytech/substrate.git', rev = '558a68f8'}
sp-staking = {default-features = false, git = 'https://github.com/paritytech/substrate.git', rev = '558a68f8'}
sp-authority-discovery = {default-features = false, git = 'https://github.com/paritytech/substrate.git', rev = '558a68f8'}
sp-npos-elections = {default-features = false, git = 'https://github.com/paritytech/substrate.git', rev = '558a68f8'}

# Substrate dependencies
frame-benchmarking = {default-features = false, optional = true, git = 'https://github.com/paritytech/substrate.git', rev = '558a68f8'}
frame-executive = {default-features = false, git = 'https://github.com/paritytech/substrate.git', rev = '558a68f8'}
frame-support = {default-features = false, git = 'https://github.com/paritytech/substrate.git', rev = '558a68f8'}
frame-system = {default-features = false, git = 'https://github.com/paritytech/substrate.git', rev = '558a68f8'}
frame-try-runtime = {default-features = false, optional = true, git = 'https://github.com/paritytech/substrate.git', rev = '558a68f8'}
frame-system-benchmarking = {default-features = false, optional = true, git = 'https://github.com/paritytech/substrate.git', rev = '558a68f8'}
frame-system-rpc-runtime-api = {default-features = false, git = 'https://github.com/paritytech/substrate.git', rev = '558a68f8'}
frame-election-provider-support = {default-features = false, git = 'https://github.com/paritytech/substrate.git', rev = '558a68f8'}
pallet-babe = {default-features = false, git = 'https://github.com/paritytech/substrate.git', rev = '558a68f8'}
pallet-balances = {default-features = false, git = 'https://github.com/paritytech/substrate.git', rev = '558a68f8'}
pallet-grandpa = {default-features = false, git = 'https://github.com/paritytech/substrate.git', rev = '558a68f8'}
pallet-randomness-collective-flip = {default-features = false, git = 'https://github.com/paritytech/substrate.git', rev = '558a68f8'}
pallet-sudo = {default-features = false, git = 'https://github.com/paritytech/substrate.git', rev = '558a68f8'}
pallet-timestamp = {default-features = false, git = 'https://github.com/paritytech/substrate.git', rev = '558a68f8'}
pallet-transaction-payment = {default-features = false, git = 'https://github.com/paritytech/substrate.git', rev = '558a68f8'}
pallet-transaction-payment-rpc-runtime-api = {default-features = false, git = 'https://github.com/paritytech/substrate.git', rev = '558a68f8'}
pallet-session = {default-features = false, git = 'https://github.com/paritytech/substrate.git', rev = '558a68f8'}
pallet-session-benchmarking = {default-features = false, optional = true, git = 'https://github.com/paritytech/substrate.git', rev = '558a68f8'}
pallet-staking = {default-features = false, git = 'https://github.com/paritytech/substrate.git', rev = '558a68f8'}
pallet-staking-reward-curve = {default-features = false, git = 'https://github.com/paritytech/substrate.git', rev = '558a68f8'}
pallet-authorship = {default-features = false, git = 'https://github.com/paritytech/substrate.git', rev = '558a68f8'}
pallet-offences = {default-features = false, git = 'https://github.com/paritytech/substrate.git', rev = '558a68f8'}
pallet-offences-benchmarking = {default-features = false, optional = true, git = 'https://github.com/paritytech/substrate.git', rev = '558a68f8'}
pallet-im-online = {default-features = false, git = 'https://github.com/paritytech/substrate.git', rev = '558a68f8'}
pallet-authority-discovery = {default-features = false, git = 'https://github.com/paritytech/substrate.git', rev = '558a68f8'}
pallet-elections-phragmen = {default-features = false, git = 'https://github.com/paritytech/substrate.git', rev = '558a68f8'}
pallet-election-provider-multi-phase = {default-features = false, git = 'https://github.com/paritytech/substrate.git', rev = '558a68f8'}
pallet-collective = {default-features = false, git = 'https://github.com/paritytech/substrate.git', rev = '558a68f8'}
pallet-membership = {default-features = false, git = 'https://github.com/paritytech/substrate.git', rev = '558a68f8'}
pallet-scheduler = {default-features = false, git = 'https://github.com/paritytech/substrate.git', rev = '558a68f8'}
pallet-democracy = {default-features = false, git = 'https://github.com/paritytech/substrate.git', rev = '558a68f8'}
pallet-utility = {default-features = false, git = 'https://github.com/paritytech/substrate.git', rev = '558a68f8'}
pallet-multisig = {default-features = false, git = 'https://github.com/paritytech/substrate.git', rev = '558a68f8'}
pallet-identity = {default-features = false, git = 'https://github.com/paritytech/substrate.git', rev = '558a68f8'}
pallet-mmr = {default-features = false, git = 'https://github.com/paritytech/substrate.git', rev = '558a68f8'}

# local dependencies
pallet-tea = {default-features = false, path = '../pallets/tea'}
pallet-auction = {default-features = false, path = '../pallets/auction'}
pallet-utils = {default-features = false, path = '../pallets/utils'}
pallet-genesis-bank = {default-features = false, path = '../pallets/genesis-bank'}
pallet-genesis-exchange = {default-features = false, path = '../pallets/genesis-exchange'}
pallet-bonding-curve = {default-features = false, path = '../pallets/bonding-curve'}

pallet-cml = {default-features = false, path = '../pallets/cml'}
cml-runtime-api = {default-features = false, path = '../pallets/cml/runtime-api'}
auction-runtime-api = {default-features = false, path = '../pallets/auction/runtime-api'}
staking-economics = {default-features = false, path = '../pallets/cml/staking-economics'}
genesis-bank-runtime-api = {default-features = false, path = '../pallets/genesis-bank/runtime-api'}
genesis-exchange-runtime-api = {default-features = false, path = '../pallets/genesis-exchange/runtime-api'}
bonding-curve-runtime-api = {default-features = false, path = '../pallets/bonding-curve/runtime-api'}
bonding-curve-impl = {default-features = false, path = "../pallets/bonding-curve/curve-impl"}

[features]
default = ['std']
runtime-benchmarks = [
	'hex-literal',
	'sp-runtime/runtime-benchmarks',

	'frame-benchmarking',
	'frame-support/runtime-benchmarks',
	'frame-system-benchmarking',
	'frame-system/runtime-benchmarks',

	'pallet-grandpa/runtime-benchmarks',
	'pallet-timestamp/runtime-benchmarks',
	'pallet-balances/runtime-benchmarks',
	'pallet-babe/runtime-benchmarks',
	'pallet-session-benchmarking',
	'pallet-staking/runtime-benchmarks',
	'pallet-offences-benchmarking',
	'pallet-im-online/runtime-benchmarks',
	'pallet-elections-phragmen/runtime-benchmarks',
	'pallet-election-provider-multi-phase/runtime-benchmarks',
	'pallet-collective/runtime-benchmarks',
	'pallet-membership/runtime-benchmarks',
	'pallet-scheduler/runtime-benchmarks',
	'pallet-democracy/runtime-benchmarks',
	'pallet-utility/runtime-benchmarks',
	'pallet-multisig/runtime-benchmarks',
	'pallet-identity/runtime-benchmarks',
	'pallet-mmr/runtime-benchmarks',

	'pallet-tea/runtime-benchmarks',
	'pallet-cml/runtime-benchmarks',
  'pallet-auction/runtime-benchmarks',
]
std = [
	'codec/std',
	'sp-api/std',
	'node-primitives/std',
	'sp-block-builder/std',
	'sp-consensus-babe/std',
	'sp-core/std',
	'sp-io/std',
	'sp-inherents/std',
	'sp-offchain/std',
	'sp-runtime/std',
	'sp-session/std',
	'sp-std/std',
	'sp-transaction-pool/std',
	'sp-version/std',
  'sp-staking/std',
	'sp-authority-discovery/std',
  'sp-npos-elections/std',

	'frame-executive/std',
	'frame-support/std',
	'frame-system-rpc-runtime-api/std',
	'frame-system/std',
	'frame-election-provider-support/std',
	'frame-try-runtime/std',

	'pallet-babe/std',
	'pallet-balances/std',
	'pallet-grandpa/std',
	'pallet-randomness-collective-flip/std',
	'pallet-sudo/std',
	'pallet-timestamp/std',
	'pallet-transaction-payment-rpc-runtime-api/std',
	'pallet-transaction-payment/std',
	'pallet-session/std',
	'pallet-staking/std',
  'pallet-authorship/std',
	'pallet-offences/std',
  'pallet-im-online/std',
	'pallet-authority-discovery/std',
	'pallet-elections-phragmen/std',
  'pallet-election-provider-multi-phase/std',
	'pallet-collective/std',
  'pallet-membership/std',
	'pallet-scheduler/std',
	'pallet-democracy/std',
  'pallet-utility/std',
	'pallet-multisig/std',
	'pallet-identity/std',
	'pallet-mmr/std',

	'pallet-tea/std',
	'pallet-cml/std',
  'pallet-auction/std',
	'pallet-utils/std',
	'pallet-genesis-bank/std',
	'pallet-genesis-exchange/std',
	'pallet-bonding-curve/std',

	'cml-runtime-api/std',
	'auction-runtime-api/std',
	'genesis-bank-runtime-api/std',
	'genesis-exchange-runtime-api/std',
	'bonding-curve-runtime-api/std',

	'staking-economics/std',
	'bonding-curve-impl/std',
]
try-runtime = [
	"frame-executive/try-runtime",
	"frame-try-runtime",
	"frame-system/try-runtime",
	"pallet-authority-discovery/try-runtime",
	"pallet-authorship/try-runtime",
	"pallet-babe/try-runtime",
	"pallet-balances/try-runtime",
	"pallet-collective/try-runtime",
	"pallet-democracy/try-runtime",
	"pallet-elections-phragmen/try-runtime",
	"pallet-grandpa/try-runtime",
	"pallet-im-online/try-runtime",
	"pallet-membership/try-runtime",
	"pallet-mmr/try-runtime",
	"pallet-multisig/try-runtime",
	"pallet-identity/try-runtime",
	"pallet-scheduler/try-runtime",
	"pallet-offences/try-runtime",
	"pallet-randomness-collective-flip/try-runtime",
	"pallet-session/try-runtime",
	"pallet-staking/try-runtime",
	"pallet-sudo/try-runtime",
	"pallet-election-provider-multi-phase/try-runtime",
	"pallet-timestamp/try-runtime",
	"pallet-transaction-payment/try-runtime",
	"pallet-utility/try-runtime",

	'pallet-tea/try-runtime',
	'pallet-cml/try-runtime',
  'pallet-auction/try-runtime',
	'pallet-utils/try-runtime',
	'pallet-genesis-bank/try-runtime',
	'pallet-genesis-exchange/try-runtime',
	'pallet-bonding-curve/try-runtime',
]
fast = ['pallet-cml/fast'] # indicate the block duration and epoch will be shorter to test
