[package]
authors = ['TeaRust']
edition = '2018'
homepage = 'https://teaproject.org'
license = 'GPL-3.0'
name = 'camellia-runtime'
repository = 'https://github.com/tearust/tea-camellia'
version = '0.0.1'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[build-dependencies]
substrate-wasm-builder={git = 'https://github.com/tearust/substrate.git', branch = 'v4.0'}

[dependencies]
# external dependencies
codec = {default-features = false, features = ['derive'], package = 'parity-scale-codec', version = '3.1'}
scale-info = { version = "2.1", default-features = false, features = ["derive"] }
hex-literal= {optional = true, version = '0.3.1'}
static_assertions = "1.1.0"

# primitives
node-primitives = { version = "2.0.0", default-features = false, git = 'https://github.com/tearust/substrate.git', branch = 'v4.0'}
sp-api = {default-features = false, git = 'https://github.com/tearust/substrate.git', branch = 'v4.0'}
sp-block-builder = {default-features = false, git = 'https://github.com/tearust/substrate.git', branch = 'v4.0'}
sp-consensus-babe = {default-features = false,  git = 'https://github.com/tearust/substrate.git', branch = 'v4.0'}
sp-core = {default-features = false, git = 'https://github.com/tearust/substrate.git', branch = 'v4.0'}
sp-inherents = {default-features = false, git = 'https://github.com/tearust/substrate.git', branch = 'v4.0'}
sp-offchain = {default-features = false, git = 'https://github.com/tearust/substrate.git', branch = 'v4.0'}
sp-runtime = {default-features = false, git = 'https://github.com/tearust/substrate.git', branch = 'v4.0'}
sp-session = {default-features = false, git = 'https://github.com/tearust/substrate.git', branch = 'v4.0'}
sp-std = {default-features = false, git = 'https://github.com/tearust/substrate.git', branch = 'v4.0'}
sp-io = {default-features = false, git = 'https://github.com/tearust/substrate.git', branch = 'v4.0'}
sp-transaction-pool = {default-features = false, git = 'https://github.com/tearust/substrate.git', branch = 'v4.0'}
sp-version = {default-features = false, git = 'https://github.com/tearust/substrate.git', branch = 'v4.0'}
sp-staking = {default-features = false, git = 'https://github.com/tearust/substrate.git', branch = 'v4.0'}
sp-authority-discovery = {default-features = false, git = 'https://github.com/tearust/substrate.git', branch = 'v4.0'}
sp-npos-elections = {default-features = false, git = 'https://github.com/tearust/substrate.git', branch = 'v4.0'}

# Substrate dependencies
frame-benchmarking = {default-features = false, optional = true, git = 'https://github.com/tearust/substrate.git', branch = 'v4.0'}
frame-executive = {default-features = false, git = 'https://github.com/tearust/substrate.git', branch = 'v4.0'}
frame-support = {default-features = false, git = 'https://github.com/tearust/substrate.git', branch = 'v4.0'}
frame-system = {default-features = false, git = 'https://github.com/tearust/substrate.git', branch = 'v4.0'}
frame-try-runtime = {default-features = false, optional = true, git = 'https://github.com/tearust/substrate.git', branch = 'v4.0'}
frame-system-benchmarking = {default-features = false, optional = true, git = 'https://github.com/tearust/substrate.git', branch = 'v4.0'}
frame-system-rpc-runtime-api = {default-features = false, git = 'https://github.com/tearust/substrate.git', branch = 'v4.0'}
frame-election-provider-support = {default-features = false, git = 'https://github.com/tearust/substrate.git', branch = 'v4.0'}
pallet-babe = {default-features = false, git = 'https://github.com/tearust/substrate.git', branch = 'v4.0'}
pallet-balances = {default-features = false, git = 'https://github.com/tearust/substrate.git', branch = 'v4.0'}
pallet-grandpa = {default-features = false, git = 'https://github.com/tearust/substrate.git', branch = 'v4.0'}
pallet-randomness-collective-flip = {default-features = false, git = 'https://github.com/tearust/substrate.git', branch = 'v4.0'}
pallet-sudo = {default-features = false, git = 'https://github.com/tearust/substrate.git', branch = 'v4.0'}
pallet-timestamp = {default-features = false, git = 'https://github.com/tearust/substrate.git', branch = 'v4.0'}
pallet-transaction-payment = {default-features = false, git = 'https://github.com/tearust/substrate.git', branch = 'v4.0'}
pallet-transaction-payment-rpc-runtime-api = {default-features = false, git = 'https://github.com/tearust/substrate.git', branch = 'v4.0'}
pallet-session = {default-features = false, git = 'https://github.com/tearust/substrate.git', branch = 'v4.0'}
pallet-session-benchmarking = {default-features = false, optional = true, git = 'https://github.com/tearust/substrate.git', branch = 'v4.0'}
pallet-authorship = {default-features = false, git = 'https://github.com/tearust/substrate.git', branch = 'v4.0'}
pallet-offences = {default-features = false, git = 'https://github.com/tearust/substrate.git', branch = 'v4.0'}
pallet-offences-benchmarking = {default-features = false, optional = true, git = 'https://github.com/tearust/substrate.git', branch = 'v4.0'}
pallet-im-online = {default-features = false, git = 'https://github.com/tearust/substrate.git', branch = 'v4.0'}
pallet-authority-discovery = {default-features = false, git = 'https://github.com/tearust/substrate.git', branch = 'v4.0'}
pallet-elections-phragmen = {default-features = false, git = 'https://github.com/tearust/substrate.git', branch = 'v4.0'}
pallet-election-provider-multi-phase = {default-features = false, git = 'https://github.com/tearust/substrate.git', branch = 'v4.0'}
pallet-collective = {default-features = false, git = 'https://github.com/tearust/substrate.git', branch = 'v4.0'}
pallet-membership = {default-features = false, git = 'https://github.com/tearust/substrate.git', branch = 'v4.0'}
pallet-scheduler = {default-features = false, git = 'https://github.com/tearust/substrate.git', branch = 'v4.0'}
pallet-democracy = {default-features = false, git = 'https://github.com/tearust/substrate.git', branch = 'v4.0'}
pallet-utility = {default-features = false, git = 'https://github.com/tearust/substrate.git', branch = 'v4.0'}
pallet-multisig = {default-features = false, git = 'https://github.com/tearust/substrate.git', branch = 'v4.0'}
pallet-identity = {default-features = false, git = 'https://github.com/tearust/substrate.git', branch = 'v4.0'}
pallet-mmr = {default-features = false, git = 'https://github.com/tearust/substrate.git', branch = 'v4.0'}
pallet-staking = {default-features = false, git = 'https://github.com/tearust/substrate.git', branch = 'v4.0'}
pallet-preimage = {default-features = false, git = 'https://github.com/tearust/substrate.git', branch = 'v4.0'}
pallet-bags-list = { default-features = false, git = 'https://github.com/tearust/substrate.git', branch = 'v4.0'}
pallet-staking-reward-curve = { default-features = false, git = 'https://github.com/tearust/substrate.git', branch = 'v4.0'}

# local dependencies
pallet-machine = {default-features = false, path = '../pallets/machine'}
pallet-cml = {default-features = false, path = '../pallets/cml'}
pallet-utils = {default-features = false, path = '../pallets/utils'}
pallet-tea-erc20 = {default-features = false, path = '../pallets/tea-erc20'}
pallet-genesis-exchange = {default-features = false, path = '../pallets/genesis-exchange'}

machine-runtime-api = {default-features = false, path = '../pallets/machine/runtime-api'}
cml-runtime-api = {default-features = false, path = '../pallets/cml/runtime-api'}
genesis-exchange-runtime-api = {default-features = false, path = '../pallets/genesis-exchange/runtime-api'}

[features]
default = ['std']
runtime-benchmarks = [
	'hex-literal',
	'sp-runtime/runtime-benchmarks',

	'frame-benchmarking',
	'frame-support/runtime-benchmarks',
	'frame-system-benchmarking',
	'frame-system/runtime-benchmarks',

	'pallet-grandpa/runtime-benchmarks',
	'pallet-timestamp/runtime-benchmarks',
	'pallet-balances/runtime-benchmarks',
	'pallet-babe/runtime-benchmarks',
	'pallet-session-benchmarking',
	'pallet-staking/runtime-benchmarks',
	'pallet-offences-benchmarking',
	'pallet-im-online/runtime-benchmarks',
	'pallet-elections-phragmen/runtime-benchmarks',
	'pallet-election-provider-multi-phase/runtime-benchmarks',
	'pallet-collective/runtime-benchmarks',
	'pallet-membership/runtime-benchmarks',
	'pallet-scheduler/runtime-benchmarks',
	'pallet-democracy/runtime-benchmarks',
	'pallet-utility/runtime-benchmarks',
	'pallet-multisig/runtime-benchmarks',
	'pallet-identity/runtime-benchmarks',
	'pallet-mmr/runtime-benchmarks',
	"pallet-preimage/runtime-benchmarks",
	"pallet-bags-list/runtime-benchmarks",

	'pallet-machine/runtime-benchmarks',
	'pallet-cml/runtime-benchmarks',
]
std = [
	'codec/std',
	'sp-api/std',
	'node-primitives/std',
	'sp-block-builder/std',
	'sp-consensus-babe/std',
	'sp-core/std',
	'sp-io/std',
	'sp-inherents/std',
	'sp-offchain/std',
	'sp-runtime/std',
	'sp-session/std',
	'sp-std/std',
	'sp-transaction-pool/std',
	'sp-version/std',
  'sp-staking/std',
	'sp-authority-discovery/std',
  'sp-npos-elections/std',

	'frame-executive/std',
	'frame-support/std',
	'frame-system-rpc-runtime-api/std',
	'frame-system/std',
	'frame-election-provider-support/std',
	'frame-try-runtime/std',

	'pallet-babe/std',
	'pallet-balances/std',
	'pallet-grandpa/std',
	'pallet-randomness-collective-flip/std',
	'pallet-sudo/std',
	'pallet-timestamp/std',
	'pallet-transaction-payment-rpc-runtime-api/std',
	'pallet-transaction-payment/std',
	'pallet-session/std',
	'pallet-staking/std',
  'pallet-authorship/std',
	'pallet-offences/std',
  'pallet-im-online/std',
	'pallet-authority-discovery/std',
	'pallet-elections-phragmen/std',
  'pallet-election-provider-multi-phase/std',
	'pallet-collective/std',
  'pallet-membership/std',
	'pallet-scheduler/std',
	'pallet-democracy/std',
  'pallet-utility/std',
	'pallet-multisig/std',
	'pallet-identity/std',
	'pallet-mmr/std',
	"pallet-preimage/std",
	"pallet-bags-list/std",

	'pallet-machine/std',
	'pallet-cml/std',
	'pallet-utils/std',
	'pallet-tea-erc20/std',
	'pallet-genesis-exchange/std',

	'cml-runtime-api/std',
	'machine-runtime-api/std',
	'genesis-exchange-runtime-api/std',
]
try-runtime = [
	"frame-executive/try-runtime",
	"frame-try-runtime",
	"frame-system/try-runtime",
	"pallet-authority-discovery/try-runtime",
	"pallet-authorship/try-runtime",
	"pallet-babe/try-runtime",
	"pallet-balances/try-runtime",
	"pallet-collective/try-runtime",
	"pallet-democracy/try-runtime",
	"pallet-elections-phragmen/try-runtime",
	"pallet-grandpa/try-runtime",
	"pallet-im-online/try-runtime",
	"pallet-membership/try-runtime",
	"pallet-mmr/try-runtime",
	"pallet-multisig/try-runtime",
	"pallet-identity/try-runtime",
	"pallet-scheduler/try-runtime",
	"pallet-offences/try-runtime",
	"pallet-randomness-collective-flip/try-runtime",
	"pallet-session/try-runtime",
	"pallet-staking/try-runtime",
	"pallet-sudo/try-runtime",
	"pallet-election-provider-multi-phase/try-runtime",
	"pallet-timestamp/try-runtime",
	"pallet-transaction-payment/try-runtime",
	"pallet-utility/try-runtime",
	"pallet-preimage/try-runtime",

	'pallet-machine/try-runtime',
	'pallet-cml/try-runtime',
	'pallet-utils/try-runtime',
	'pallet-tea-erc20/try-runtime',
	'pallet-genesis-exchange/try-runtime',
]
fast = ['pallet-cml/fast'] # indicate the block duration and epoch will be shorter to test
