[package]
name = "pallet-auction"
description = "Auction pallet"
repository = "https://github.com/tearust/tea-camellia"
license = "GPL-3.0"
version = "3.0.0"
homepage = "https://teaproject.org"
edition = "2018"

[dependencies]
log = "0.4.8"
serde = { version = "1.0.124", optional = true }
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate", version = '3.0.0', default-features = false, rev = '90cfb952f' }
sp-std = { git = "https://github.com/paritytech/substrate", version = '3.0.0', default-features = false, rev = '90cfb952f' }

frame-support = { git = "https://github.com/paritytech/substrate", version = '3.0.0', default-features = false, rev = '90cfb952f' }
frame-system = { git = "https://github.com/paritytech/substrate", version = '3.0.0', default-features = false, rev = '90cfb952f' }
node-primitives = { version = "2.0.0", default-features = false, git = 'https://github.com/paritytech/substrate.git', rev = '90cfb952f'}
frame-benchmarking = { version = "3.1.0", default-features = false, optional = true, git = 'https://github.com/paritytech/substrate.git', rev = '90cfb952f' }

pallet-cml = { path = "../cml", version="3.0.0", default-features = false }
pallet-utils = {default-features = false, version = '0.0.1', path = '../utils'}
pallet-genesis-bank = { path = '../genesis-bank', default-features = false }
auction-interface = { path = "./interface", default-features = false }
genesis-bank-interface = { path = "../genesis-bank/interface", default-features = false }

[dev-dependencies]
sp-core = { version = '3.0.0', git = 'https://github.com/paritytech/substrate.git', rev = '90cfb952f' }
sp-io = { version = '3.0.0', git = 'https://github.com/paritytech/substrate.git', rev = '90cfb952f' }
pallet-balances = { version = "3.0.0", git = 'https://github.com/paritytech/substrate.git', rev = '90cfb952f' }

[features]
default = ["std"]
std = [
	"serde",
	"codec/std",
	"sp-runtime/std",
	"sp-std/std",
	"node-primitives/std",
	"frame-support/std",
	"frame-system/std",
	"frame-benchmarking/std",
	"pallet-cml/std",
    "pallet-utils/std",
	"pallet-genesis-bank/std",
	"auction-interface/std",
	"genesis-bank-interface/std",
]
runtime-benchmarks = [
	"frame-benchmarking",
]
try-runtime = ["frame-support/try-runtime"]