[package]
name = "pallet-auction"
description = "Auction pallet"
repository = "https://github.com/tearust/tea-camellia"
license = "GPL-3.0"
version = "3.0.0"
homepage = "https://teaproject.org"
edition = "2018"

[dependencies]
log = "0.4.8"
serde = { version = "1.0.124", optional = true }
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate", version = '3.0.0', default-features = false, rev = '83808aa' }
sp-std = { git = "https://github.com/paritytech/substrate", version = '3.0.0', default-features = false, rev = '83808aa' }

frame-support = { git = "https://github.com/paritytech/substrate", version = '3.0.0', default-features = false, rev = '83808aa' }
frame-system = { git = "https://github.com/paritytech/substrate", version = '3.0.0', default-features = false, rev = '83808aa' }
node-primitives = { version = "2.0.0", default-features = false, git = 'https://github.com/paritytech/substrate.git', rev = '83808aa'}
frame-benchmarking = { version = "3.1.0", default-features = false, optional = true, git = 'https://github.com/paritytech/substrate.git', rev = '83808aa' }

pallet-cml = { path = "../cml", version="3.0.0", default-features = false }
pallet-utils = {default-features = false, version = '0.0.1', path = '../utils'}
pallet-genesis-bank = { path = '../genesis-bank', default-features = false }
auction-interface = { path = "./interface", default-features = false }
genesis-bank-interface = { path = "../genesis-bank/interface", default-features = false }

[dev-dependencies]
sp-core = { version = '3.0.0', git = 'https://github.com/paritytech/substrate.git', rev = '83808aa' }
sp-io = { version = '3.0.0', git = 'https://github.com/paritytech/substrate.git', rev = '83808aa' }
pallet-randomness-collective-flip = { version = '3.0.0', git = 'https://github.com/paritytech/substrate.git', rev = '83808aa' }
pallet-balances = { version = "3.0.0", git = 'https://github.com/paritytech/substrate.git', rev = '83808aa' }
genesis-exchange-interface = { path = "../genesis-exchange/interface" }
tea-interface = { path = "../tea/interface" }
bonding-curve-interface = { path = "../bonding-curve/interface" }

[features]
default = ["std"]
std = [
	"serde",
	"codec/std",
	"sp-runtime/std",
	"sp-std/std",
	"node-primitives/std",
	"frame-support/std",
	"frame-system/std",
	"frame-benchmarking/std",
	"pallet-cml/std",
    "pallet-utils/std",
	"pallet-genesis-bank/std",
	"auction-interface/std",
	"genesis-bank-interface/std",
]
runtime-benchmarks = [
	"frame-benchmarking",
]
try-runtime = ["frame-support/try-runtime"]