[package]
name = "pallet-cml"
version = "3.0.0"
authors = ["jacky.li <liyangwood@gmail.com>"]
edition = "2018"
license = "GPL-3.0"
homepage = "https://teaproject.org"
repository = "https://github.com/tearust/tea-camellia"
description = ""
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
log = "0.4.8"
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false }
scale-info = { version = "1.0", default-features = false, features = ["derive"] }

sp-std = {default-features = false, git = 'https://github.com/paritytech/substrate.git', rev = '558a68f8'}
sp-core = {git = 'https://github.com/paritytech/substrate.git', rev = '558a68f8', default-features = false}
# Needed for various traits. In our case, `OnFinalize`.
sp-runtime = { default-features = false, git = 'https://github.com/paritytech/substrate.git', rev = '558a68f8' }
# Needed for type-safe access to storage DB.
frame-support = {default-features = false, git = 'https://github.com/paritytech/substrate.git', rev = '558a68f8'}
# `system` module provides us with all sorts of useful stuff and macros depend on it being around.
frame-system = { default-features = false, git = 'https://github.com/paritytech/substrate.git', rev = '558a68f8' }
frame-benchmarking = { default-features = false, optional = true, git = 'https://github.com/paritytech/substrate.git', rev = '558a68f8' }
node-primitives = { version = "2.0.0", default-features = false, git = 'https://github.com/paritytech/substrate.git', rev = '558a68f8'}
pallet-utils = {default-features = false, version = '0.0.1', path = '../utils'}
auction-interface = { path = "../auction/interface", default-features = false }
tea-interface = { path = "../tea/interface", default-features = false}
genesis-exchange-interface = { path = "../genesis-exchange/interface", default-features = false }
bonding-curve-interface = { path = "../bonding-curve/interface", default-features = false }

# optional, used in std
rand = { version = "0.8.4", optional = true }
serde = { version = "1.0.101", optional = true }

[dev-dependencies]
sp-io = {git = 'https://github.com/paritytech/substrate.git', rev = '558a68f8'}
pallet-balances = { git = 'https://github.com/paritytech/substrate.git', rev = '558a68f8' }
pallet-randomness-collective-flip = { git = 'https://github.com/paritytech/substrate.git', rev = '558a68f8' }

[features]
default = ["std"]
std = [
	"serde",
	"rand",
	"codec/std",
	'scale-info/std',
	"sp-std/std",
	"sp-core/std",
	"sp-runtime/std",
	"frame-support/std",
	"frame-system/std",
	"frame-benchmarking/std",
	"node-primitives/std",
	"pallet-utils/std",
	"genesis-exchange-interface/std",
	"auction-interface/std",
	"bonding-curve-interface/std",
]
runtime-benchmarks = [
	"frame-benchmarking",
]
try-runtime = ["frame-support/try-runtime"]
fast = [] # indicate the block duration and epoch will be shorter to test
